full image url for meta

--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
     <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Page Not Found!">
     <meta property="og:description" content="Sorry but we couldn&#39;t find the page you are looking for. Please check to make sure you&#39;ve typed the URL correctly.  ">
-    <meta property="og:image" content="/img/classmates-handsup-header.jpg">
+    <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/404.md">
 
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Page Not Found!">
     <meta property="twitter:description" content="Sorry but we couldn&#39;t find the page you are looking for. Please check to make sure you&#39;ve typed the URL correctly.  ">
-    <meta property="twitter:image" content="/img/classmates-handsup-header.jpg">
+    <meta property="twitter:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
         <meta property="twitter:image:alt" content="Classmates handsup header">
           
     <link rel="icon" href="/favicon.ico">
