--- a/leicester-schools/index.html
+++ b/leicester-schools/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Leicester Schools' Spend Per Pupil">
     <meta property="og:description" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
-    <meta property="og:image" content="/img/classmates-handsup-header.jpg">
+    <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/leicester-schools">
 
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Leicester Schools' Spend Per Pupil">
     <meta property="twitter:description" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
-    <meta property="twitter:image" content="/img/classmates-handsup-header.jpg">
+    <meta property="twitter:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
         <meta property="twitter:image:alt" content="Classmates handsup header">
           
     <link rel="icon" href="/favicon.ico">
