--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Privacy Policy">
     <meta property="og:description" content="This privacy policy sets out how Tutor Interventions uses and protects any information that you give Tutor Interventions when you use this website. Tutor Interventions is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using ...">
-    <meta property="og:image" content="/img/classmates-handsup-header.jpg">
+    <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/privacy-policy">
 
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Privacy Policy">
     <meta property="twitter:description" content="This privacy policy sets out how Tutor Interventions uses and protects any information that you give Tutor Interventions when you use this website. Tutor Interventions is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using ...">
-    <meta property="twitter:image" content="/img/classmates-handsup-header.jpg">
+    <meta property="twitter:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
         <meta property="twitter:image:alt" content="Classmates handsup header">
           
     <link rel="icon" href="/favicon.ico">
