--- a/request-tutor/index.html
+++ b/request-tutor/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Request Tutor">
     <meta property="og:description" content="Give us an idea of what you are looking for and we will get back to you very shortly ">
-    <meta property="og:image" content="/img/classmates-handsup-header.jpg">
+    <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/request-tutor">
 
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Request Tutor">
     <meta property="twitter:description" content="Give us an idea of what you are looking for and we will get back to you very shortly ">
-    <meta property="twitter:image" content="/img/classmates-handsup-header.jpg">
+    <meta property="twitter:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
         <meta property="twitter:image:alt" content="Classmates handsup header">
           
     <link rel="icon" href="/favicon.ico">
