--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Terms and Conditions">
     <meta property="og:description" content="Welcome to our website. If you continue to browse and use this website, you are agreeing to comply with and be bound by the following terms and conditions of use, which together with our privacy policy govern Tutor Interventions’ relationship with you in relation to this website. If you disagree ...">
-    <meta property="og:image" content="/img/classmates-handsup-header.jpg">
+    <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/terms-and-conditions">
 
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Terms and Conditions">
     <meta property="twitter:description" content="Welcome to our website. If you continue to browse and use this website, you are agreeing to comply with and be bound by the following terms and conditions of use, which together with our privacy policy govern Tutor Interventions’ relationship with you in relation to this website. If you disagree ...">
-    <meta property="twitter:image" content="/img/classmates-handsup-header.jpg">
+    <meta property="twitter:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
         <meta property="twitter:image:alt" content="Classmates handsup header">
           
     <link rel="icon" href="/favicon.ico">
