hero image changes

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-12 mx-auto">
-            <h1 class="mb-5">Private Tutoring In Leicester By A Tutor With 20 Years Experience</h1>
+            <h1>Private Tutoring In Leicester By A Tutor With 20 Years Experience</h1>
             <div class="intro-para">
             <p>Looking for a local private tutor for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs?</p>
             <div class="contact-me">
