--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Looking for a local private tutor for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs? ">
+    <meta name="description" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
     <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
-    <meta property="og:description" content="Looking for a local private tutor for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs? ">
+    <meta property="og:description" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
     <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/">
 
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
-    <meta property="twitter:description" content="Looking for a local private tutor for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs? ">
+    <meta property="twitter:description" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
     <meta property="twitter:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup.jpg">
         <meta property="twitter:image:alt" content="Classmates handsup">
           
@@ -147,10 +147,19 @@
           <div class="col-xl-12 mx-auto">
             <h1>Private Tutoring In Leicester By A Tutor With 20 Years Experience</h1>
             <div class="intro-para">
-            <p>Looking for a local private tutor for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs?</p>
+              <ul style="">
+              <li class="hidden" style="">This is my second lesson with Rachael. She is very professional and organised. In the hour she’s here they get a lot done.
+              <div class="quote-author">Dee P.</div>
+              </li>
+              <li class="" style="">Looking for a local private tutor for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs?</li>
+              <li class="hidden" style="">Great tutor committed to my daughter and able to manage her complex needs using different techniques and humour. My daughter can be difficult to engage/encourage and has low self-esteem, with Rachael’s support she is learning and her confidence is growing and showing through already.
+              <div class="quote-author">Madison J.</div>
+              </li>
+ 
+              </ul>
             <div class="contact-me">
-            Call me on <a href="tel:0756 358 2702">0756 358 2702</a><br>
-            Or contact us through our online form:
+            <div><span>Call me on</span><a href="tel:0756 358 2702">0756 358 2702</a></div>
+            <div>Or contact us through our online form:</div>
             </div>
             </div>
             <a class="btn btn-primary btn-blue" href="/request-tutor/">Contact Us <span class="arrow">&gt;</span></a>
@@ -533,7 +542,8 @@
     <script src="/js/jqBootstrapValidation.js"></script>
     <script src="/js/tutor_me.js"></script>
     <script src="/js/main.js"></script>
-     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+                        <script src="/js/text-slider.js"></script>
+             <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
     <script>
     window.addEventListener("load", function(){
