--- a/404.html
+++ b/404.html
@@ -46,7 +46,7 @@
     <link href="/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
     <link href="/css/styles.css" rel="stylesheet">
-
+    <link href="/css/social-media.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -63,6 +63,7 @@
 
   gtag('config', 'UA-123302569-1');
 </script>
+
 
 
 <script>
@@ -404,5 +405,19 @@
     }
     })});
     </script>
-</body>
+    <div class="social-media">
+    <a href="javascript:void(0)" 
+    onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2F404.md%2F', 'facebook-share', 'width=580,height=296');return false;"
+     class="fa fa-facebook">   
+    </a>
+    <a href="javascript:void(0)" 
+    onClick="window.open('https://twitter.com/intent/tweet?text=Sorry%20but%20we%20couldn%26%2339%3Bt%20find%20the%20page%20you%20are%20looking%20for.%20Please%20check%20to%20make%20sure%20you%26%2339%3Bve%20typed%20the%20URL%20correctly.%20%20&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2F404.md%2F', 'twitter-share', 'width=550,height=235');return false;" 
+     class="fa fa-twitter">   
+    </a>
+    <a href="javascript:void(0)" 
+    onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2F404.md%2F', 'google-plus-share', 'width=490,height=530');return false;"
+     class="fa fa-google">
+    
+    </a>
+</div></body>
 </html>
