--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@
     <link href="/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
     <link href="/css/styles.css" rel="stylesheet">
-
+    <link href="/css/social-media.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -63,6 +63,7 @@
 
   gtag('config', 'UA-123302569-1');
 </script>
+
 
 
 <script>
@@ -470,5 +471,19 @@ My daughter can be difficult to engage/encourage and has low self-esteem, with R
     }
     })});
     </script>
-</body>
+    <div class="social-media">
+    <a href="javascript:void(0)" 
+    onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fabout%2F', 'facebook-share', 'width=580,height=296');return false;"
+     class="fa fa-facebook">   
+    </a>
+    <a href="javascript:void(0)" 
+    onClick="window.open('https://twitter.com/intent/tweet?text=Welcome%20to%20Tutor%20Interventions%20in%20Leicester.%20I%E2%80%99m%20Rachael%20Dyer%20and%20I%20set%20up%20Tutor%20Interventions%20to%20provide%20tutoring%20services%20for%20pupils%20in%20and%20around%20the%20Leicester%20area.%20I%20have%20over%2020%20years%20experience%20teaching%20children%20with%20varying%20levels%20of%20Special%20Needs%2C%20including%2C%20but%20not%20limited%20to%3A%20%20Attention%20Deficit%20Hyperactivity%20Disorder%20...&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fabout%2F', 'twitter-share', 'width=550,height=235');return false;" 
+     class="fa fa-twitter">   
+    </a>
+    <a href="javascript:void(0)" 
+    onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fabout%2F', 'google-plus-share', 'width=490,height=530');return false;"
+     class="fa fa-google">
+    
+    </a>
+</div></body>
 </html>
