--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -46,7 +46,7 @@
     <link href="/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
     <link href="/css/styles.css" rel="stylesheet">
-
+    <link href="/css/social-media.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -63,6 +63,7 @@
 
   gtag('config', 'UA-123302569-1');
 </script>
+
 
 
 <script>
@@ -420,5 +421,19 @@ We will not sell, distribute or lease your personal information to third parties
     }
     })});
     </script>
-</body>
+    <div class="social-media">
+    <a href="javascript:void(0)" 
+    onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fprivacy-policy%2F', 'facebook-share', 'width=580,height=296');return false;"
+     class="fa fa-facebook">   
+    </a>
+    <a href="javascript:void(0)" 
+    onClick="window.open('https://twitter.com/intent/tweet?text=This%20privacy%20policy%20sets%20out%20how%20Tutor%20Interventions%20uses%20and%20protects%20any%20information%20that%20you%20give%20Tutor%20Interventions%20when%20you%20use%20this%20website.%20Tutor%20Interventions%20is%20committed%20to%20ensuring%20that%20your%20privacy%20is%20protected.%20Should%20we%20ask%20you%20to%20provide%20certain%20information%20by%20which%20you%20can%20be%20identified%20when%20using%20...&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fprivacy-policy%2F', 'twitter-share', 'width=550,height=235');return false;" 
+     class="fa fa-twitter">   
+    </a>
+    <a href="javascript:void(0)" 
+    onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fprivacy-policy%2F', 'google-plus-share', 'width=490,height=530');return false;"
+     class="fa fa-google">
+    
+    </a>
+</div></body>
 </html>
