--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -46,7 +46,7 @@
     <link href="/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
     <link href="/css/styles.css" rel="stylesheet">
-
+    <link href="/css/social-media.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -63,6 +63,7 @@
 
   gtag('config', 'UA-123302569-1');
 </script>
+
 
 
 <script>
@@ -403,5 +404,19 @@
     }
     })});
     </script>
-</body>
+    <div class="social-media">
+    <a href="javascript:void(0)" 
+    onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fterms-and-conditions%2F', 'facebook-share', 'width=580,height=296');return false;"
+     class="fa fa-facebook">   
+    </a>
+    <a href="javascript:void(0)" 
+    onClick="window.open('https://twitter.com/intent/tweet?text=Welcome%20to%20our%20website.%20If%20you%20continue%20to%20browse%20and%20use%20this%20website%2C%20you%20are%20agreeing%20to%20comply%20with%20and%20be%20bound%20by%20the%20following%20terms%20and%20conditions%20of%20use%2C%20which%20together%20with%20our%20privacy%20policy%20govern%20Tutor%20Interventions%E2%80%99%20relationship%20with%20you%20in%20relation%20to%20this%20website.%20If%20you%20disagree%20...&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fterms-and-conditions%2F', 'twitter-share', 'width=550,height=235');return false;" 
+     class="fa fa-twitter">   
+    </a>
+    <a href="javascript:void(0)" 
+    onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fterms-and-conditions%2F', 'google-plus-share', 'width=490,height=530');return false;"
+     class="fa fa-google">
+    
+    </a>
+</div></body>
 </html>
