--- a/about/index.html
+++ b/about/index.html
@@ -472,6 +472,7 @@ My daughter can be difficult to engage/encourage and has low self-esteem, with R
     })});
     </script>
     <div class="social-media">
+<div class="sm-container">
     <a href="javascript:void(0)" 
     onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fabout%2F', 'facebook-share', 'width=580,height=296');return false;"
      class="fa fa-facebook">   
@@ -482,8 +483,8 @@ My daughter can be difficult to engage/encourage and has low self-esteem, with R
     </a>
     <a href="javascript:void(0)" 
     onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fabout%2F', 'google-plus-share', 'width=490,height=530');return false;"
-     class="fa fa-google">
-    
+     class="fa fa-google">   
     </a>
+    </div>
 </div></body>
 </html>
