--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -203,7 +203,7 @@ We will not sell, distribute or lease your personal information to third parties
     <footer class="footer">
       <div class="container">
         <div class="row top">
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <div class="widget">
                     <h4>Tutor Interventions</h4>
                     <p>
@@ -211,7 +211,21 @@ We will not sell, distribute or lease your personal information to third parties
                     </p>               
                 </div>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                <div class="widget">
+                    <div class="img-cont">
+                        <a href="http://thetutorsassociation.org.uk/" title="Tutor Association">
+                        <img src="/img/tutors-association.png"  alt="Tutor Association Badge">
+                        </a> 
+                    </div>
+                    <div class="img-cont">
+                    <a href="http://uk.mathletics.com/" title="Mathletics">
+                    <img src="/img/mathletics.png"  alt="Mathletics Badges">
+                    </a> 
+                    </div>              
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                 <div class="widget">
                     <h4>Contacts</h4>
                     <ul class="contact-details">
@@ -222,29 +236,6 @@ We will not sell, distribute or lease your personal information to third parties
 			        </ul>              
                 </div>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="widget">
-                    <h4>Tutor Interventions</h4>
-                    <p>
-                    Tutor Interventions in Leicester helps your child succeed and thrive so that they can be all that they can.
-                    </p>               
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="widget">
-                    <div class="img-cont">
-                    <a href="http://thetutorsassociation.org.uk/">
-                    <img src="/img/tutors-association.png">
-                    </a> 
-                    </div>
-                    <div class="img-cont">
-                    <a href="http://uk.mathletics.com/">
-                    <img src="/img/mathletics.png">
-                    </a> 
-                    </div>              
-                </div>
-            </div>
-
         </div>
         <div class="bottom">
             Copyright © Tutor Interventions 2018| <a href="/terms-and-conditions/">Terms and Conditions</a> | <a href="/privacy-policy/">Privacy</a>
