add testimonail section. og:type added. masthead adjusted

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
+    <meta name="description" content="Leicester Tutor With 20 Years Experience">
     <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
-    <meta property="og:title" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
-    <meta property="og:description" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
-    <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup.jpg">
+    <meta property="og:type"   content="website" /> 
+    <meta property="og:title" content="Leicester Tutor, Rachael Dyer, With 20 Years Teaching Experience">
+    <meta property="og:description" content="Leicester Tutor With 20 Years Experience">
+    <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/">
 
     <meta property="twitter:card" content="summary">
-    <meta property="twitter:title" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
-    <meta property="twitter:description" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
-    <meta property="twitter:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup.jpg">
-        <meta property="twitter:image:alt" content="Classmates handsup">
+    <meta property="twitter:title" content="Leicester Tutor, Rachael Dyer, With 20 Years Teaching Experience">
+    <meta property="twitter:description" content="Leicester Tutor With 20 Years Experience">
+    <meta property="twitter:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
+        <meta property="twitter:image:alt" content="Classmates handsup header">
           
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -37,7 +38,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Private Tutoring In Leicester By A Tutor With 20 Years Experience | Tutor Interventions</title>
+    <title>Leicester Tutor, Rachael Dyer, With 20 Years Teaching Experience | Tutor Interventions</title>
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -141,47 +142,57 @@
         </div>
     </nav>
 </nav>     <!-- Masthead -->
-    <header class="masthead text-white text-center" style="background-image:url('/img/classmates-handsup.jpg');">
+    <header class="masthead text-white text-center" style="background-image:url('/img/classmates-handsup-header.jpg');">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-xl-12 mx-auto">
-            <h1>Private Tutoring In Leicester By A Tutor With 20 Years Experience</h1>
+            <h1>Leicester Tutor, Rachael Dyer, With 20 Years Teaching Experience</h1>
             <div class="intro-para">
-              <ul style="">
-              <li class="hidden" style="">This is my second lesson with Rachael. She is very professional and organised. In the hour she’s here they get a lot done.
-              <div class="quote-author">Dee P.</div>
-              </li>
-              <li class="" style="">Looking for a local private tutor for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs?</li>
-              <li class="hidden" style="">Great tutor committed to my daughter and able to manage her complex needs using different techniques and humour. My daughter can be difficult to engage/encourage and has low self-esteem, with Rachael’s support she is learning and her confidence is growing and showing through already.
-              <div class="quote-author">Madison J.</div>
-              </li>
- 
-              </ul>
-            <div class="contact-me">
-            <div><span>Call me on </span><a href="tel:0756 358 2702">0756 358 2702</a></div>
-            <div>Or contact us through our online form:</div>
+              Looking for a local private tutor in Leicester for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs?            <div class="contact-me">
+            <div><span>Call me, Rachael, on </span><a href="tel:0756 358 2702">0756 358 2702</a></div>
+            <div>Or contact me through my online form:</div>
             </div>
             </div>
-            <a class="btn btn-primary btn-blue" href="/request-tutor/">Contact Us <span class="arrow">&gt;</span></a>
+            <a class="btn btn-primary btn-blue" href="/request-tutor/">Contact Me <span class="arrow">&gt;</span></a>
+
+      
+
           </div>
         </div>
       </div>
     </header>
-        <section class="feature specialities bg-light text-center">
+     <!-- Testimonials -->
+    <section class="feature home-testimonial text-center bg-light">
+      <div class="container">
+        <h2>What clients are saying...</h2>
+        <div class="seperator"></div>
+        <div class="row">
+          <div class="col-lg-6">
+              <h5>Dee P.</h5>
+              <p class="font-weight-light">"This is my second lesson with Rachael. She is very professional and organised. In the hour she’s here they get a lot done."</p>
+          </div>
+          <div class="col-lg-6">
+  
+              <h5>Madison J.</h5>
+              <p class="font-weight-light">"Great tutor committed to my daughter and able to manage her complex needs using different techniques and humour. My daughter can be difficult to engage/encourage and has low self-esteem, with Rachael’s support she is learning and her confidence is growing and showing through already."</p>
+          </div>
+        </div>
+      </div>
+    </section>        <section class="feature specialities bg-light text-center">
       <div class="container">
         <div class="row">
             <article class="col-lg-12">
-             <h2>Our Tutor Specialities</h2>
+             <h2>My Tutor Specialities</h2>
              <div class="seperator"></div>
              <p>
-             We specialise in students with special needs and can provide tutoring for the core subjects: English and Maths from Year 3 to Year 11 (including GCSEs). Also 11+ exam preparation.
+             I specialise in students with special needs and can provide tutoring for the core subjects: English and Maths from Year 3 to Year 11 (including GCSEs). Also 11+ exam preparation.
              </p>
              <p>
-             We can also cover other subjects on request, including life skills and functional skills for Year 12 right through to adult education.
+             I can also cover other subjects on request, including life skills and functional skills for Year 12 right through to adult education.
              </p>
              <p>
-             We are available days and evenings, weekends and during the school holidays.
+             I'm available during both the day and evenings. And also during the weekends and the school holidays.
              </p>
             <p>
              Available for home tuition or the more flexible online tuition.
@@ -198,7 +209,7 @@
       <div class="container">
         <div class="row">
             <div class="col-lg-12">
-             <h2>Our Key Advantages</h2>
+             <h2>Key Advantages With Me</h2>
              <div class="seperator"></div>
                 <div class="row">
                 <div class="col-lg-3 icon-item">
@@ -259,7 +270,7 @@
                             <h4>No Obligation Contact</h4>
                             <div class="desc">
                             <p>
-                            Complete the 'Request A Tutor' form or contact us either by email, through the 'Feedback' form or by telephone. This gives you the opportunity to ask any preliminary questions you may have.
+                            Complete the 'Request A Tutor' form or contact me either by email, through the 'Feedback' form or by telephone. This gives you the opportunity to ask any preliminary questions you may have.
                             </p>
                             </div>
                             <a class="btn btn-primary btn-blue" href="/request-tutor/">Contact Us <span class="arrow">&gt;</span></a>
@@ -278,7 +289,7 @@
                             <h4>Arrange Free Initial Meeting</h4>
                             <div class="desc">
                             <p>
-                            It's important that both the Parent/ Carer and Student feel happy and confident with their Tutor, so we offer a free, no obligation, initial meeting. All needs and requirements/ worries and concerns can be discussed, as well as ensuring that the Student and Tutor are compatible.
+                            It's important that both the Parent/ Carer and Student feel happy and confident with their Tutor, so I offer a free, no obligation, initial meeting. All needs, requirements, worries and concerns can be discussed. It's also a good opportunity to reassure everyone that we are all compatible.
                             </p>
                             </div>
                             <a class="btn btn-primary btn-blue" href="/request-tutor/">Arrange Meetup <span class="arrow">&gt;</span></a>
@@ -297,10 +308,10 @@
                             <h4>Engage Your Tutor</h4>
                             <div class="desc">
                             <p>
-                            If both you and your child are happy, you can then engage the Tutor by agreeing an available day, time and frequency of sessions that suits you. 
+                            If both you and your child are happy, you can then engage me, the Tutor, by agreeing an available day, time and frequency of sessions that suits you. 
                             </p>
                             </div>
-                            <a class="btn btn-primary btn-blue" href="/request-tutor/">Engage A Tutor <span class="arrow">&gt;</span></a>
+                            <a class="btn btn-primary btn-blue" href="/request-tutor/">Engage Your Tutor <span class="arrow">&gt;</span></a>
                          </div>
                           <div class="step">3</div>
                         </div>
@@ -534,8 +545,7 @@
     <script src="/js/jqBootstrapValidation.js"></script>
     <script src="/js/tutor_me.js"></script>
     <script src="/js/main.js"></script>
-                        <script src="/js/text-slider.js"></script>
-             <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+                 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
     <script>
     window.addEventListener("load", function(){
@@ -557,15 +567,15 @@
 <div class="sm-container">
     <a href="javascript:void(0)" 
     onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'facebook-share', 'width=580,height=296');return false;"
-     class="fa fa-facebook">   
+     class="fa fa-facebook" title="Share on Facebook">   
     </a>
     <a href="javascript:void(0)" 
-    onClick="window.open('https://twitter.com/intent/tweet?text=Private%20Tutoring%20In%20Leicester%20By%20A%20Tutor%20With%2020%20Years%20Experience&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'twitter-share', 'width=550,height=235');return false;" 
-     class="fa fa-twitter">   
+    onClick="window.open('https://twitter.com/intent/tweet?text=Leicester%20Tutor%20With%2020%20Years%20Experience&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'twitter-share', 'width=550,height=235');return false;" 
+     class="fa fa-twitter"  title="Share on Twitter">   
     </a>
     <a href="javascript:void(0)" 
     onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'google-plus-share', 'width=490,height=530');return false;"
-     class="fa fa-google">   
+     class="fa fa-google"  title="Share on Google+">   
     </a>
     </div>
 </div></body>
