--- a/request-tutor/index.html
+++ b/request-tutor/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Give us an idea of what you are looking for and we will get back to you very shortly ">
     <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
+    <meta property="og:type"   content="website" /> 
     <meta property="og:title" content="Request Tutor">
     <meta property="og:description" content="Give us an idea of what you are looking for and we will get back to you very shortly ">
     <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
@@ -521,15 +522,15 @@
 <div class="sm-container">
     <a href="javascript:void(0)" 
     onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Frequest-tutor%2F', 'facebook-share', 'width=580,height=296');return false;"
-     class="fa fa-facebook">   
+     class="fa fa-facebook" title="Share on Facebook">   
     </a>
     <a href="javascript:void(0)" 
     onClick="window.open('https://twitter.com/intent/tweet?text=Give%20us%20an%20idea%20of%20what%20you%20are%20looking%20for%20and%20we%20will%20get%20back%20to%20you%20very%20shortly%20&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Frequest-tutor%2F', 'twitter-share', 'width=550,height=235');return false;" 
-     class="fa fa-twitter">   
+     class="fa fa-twitter"  title="Share on Twitter">   
     </a>
     <a href="javascript:void(0)" 
     onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Frequest-tutor%2F', 'google-plus-share', 'width=490,height=530');return false;"
-     class="fa fa-google">   
+     class="fa fa-google"  title="Share on Google+">   
     </a>
     </div>
 </div></body>
