--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Sorry but we couldn&#39;t find the page you are looking for. Please check to make sure you&#39;ve typed the URL correctly.  ">
     <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
+    <meta property="og:type"   content="website" /> 
     <meta property="og:title" content="Page Not Found!">
     <meta property="og:description" content="Sorry but we couldn&#39;t find the page you are looking for. Please check to make sure you&#39;ve typed the URL correctly.  ">
     <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
@@ -400,15 +401,15 @@
 <div class="sm-container">
     <a href="javascript:void(0)" 
     onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2F404.md%2F', 'facebook-share', 'width=580,height=296');return false;"
-     class="fa fa-facebook">   
+     class="fa fa-facebook" title="Share on Facebook">   
     </a>
     <a href="javascript:void(0)" 
     onClick="window.open('https://twitter.com/intent/tweet?text=Sorry%20but%20we%20couldn%26%2339%3Bt%20find%20the%20page%20you%20are%20looking%20for.%20Please%20check%20to%20make%20sure%20you%26%2339%3Bve%20typed%20the%20URL%20correctly.%20%20&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2F404.md%2F', 'twitter-share', 'width=550,height=235');return false;" 
-     class="fa fa-twitter">   
+     class="fa fa-twitter"  title="Share on Twitter">   
     </a>
     <a href="javascript:void(0)" 
     onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2F404.md%2F', 'google-plus-share', 'width=490,height=530');return false;"
-     class="fa fa-google">   
+     class="fa fa-google"  title="Share on Google+">   
     </a>
     </div>
 </div></body>
