--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Welcome to Tutor Interventions in Leicester. I’m Rachael Dyer and I set up Tutor Interventions to provide tutoring services for pupils in and around the Leicester area. I have over 20 years experience teaching children with varying levels of Special Needs, including, but not limited to:  Attention Deficit Hyperactivity Disorder ...">
     <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
+    <meta property="og:type"   content="website" /> 
     <meta property="og:title" content="About Us">
     <meta property="og:description" content="Welcome to Tutor Interventions in Leicester. I’m Rachael Dyer and I set up Tutor Interventions to provide tutoring services for pupils in and around the Leicester area. I have over 20 years experience teaching children with varying levels of Special Needs, including, but not limited to:  Attention Deficit Hyperactivity Disorder ...">
     <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
@@ -466,15 +467,15 @@ My daughter can be difficult to engage/encourage and has low self-esteem, with R
 <div class="sm-container">
     <a href="javascript:void(0)" 
     onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fabout%2F', 'facebook-share', 'width=580,height=296');return false;"
-     class="fa fa-facebook">   
+     class="fa fa-facebook" title="Share on Facebook">   
     </a>
     <a href="javascript:void(0)" 
     onClick="window.open('https://twitter.com/intent/tweet?text=Welcome%20to%20Tutor%20Interventions%20in%20Leicester.%20I%E2%80%99m%20Rachael%20Dyer%20and%20I%20set%20up%20Tutor%20Interventions%20to%20provide%20tutoring%20services%20for%20pupils%20in%20and%20around%20the%20Leicester%20area.%20I%20have%20over%2020%20years%20experience%20teaching%20children%20with%20varying%20levels%20of%20Special%20Needs%2C%20including%2C%20but%20not%20limited%20to%3A%20%20Attention%20Deficit%20Hyperactivity%20Disorder%20...&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fabout%2F', 'twitter-share', 'width=550,height=235');return false;" 
-     class="fa fa-twitter">   
+     class="fa fa-twitter"  title="Share on Twitter">   
     </a>
     <a href="javascript:void(0)" 
     onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fabout%2F', 'google-plus-share', 'width=490,height=530');return false;"
-     class="fa fa-google">   
+     class="fa fa-google"  title="Share on Google+">   
     </a>
     </div>
 </div></body>
