--- a/leicester-schools/index.html
+++ b/leicester-schools/index.html
@@ -4,17 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
+    <meta name="description" content="Leicester Tutor With 20 Years Experience">
     <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
+    <meta property="og:type"   content="website" /> 
     <meta property="og:title" content="Leicester Schools' Spend Per Pupil">
-    <meta property="og:description" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
+    <meta property="og:description" content="Leicester Tutor With 20 Years Experience">
     <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/leicester-schools">
 
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Leicester Schools' Spend Per Pupil">
-    <meta property="twitter:description" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
+    <meta property="twitter:description" content="Leicester Tutor With 20 Years Experience">
     <meta property="twitter:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
         <meta property="twitter:image:alt" content="Classmates handsup header">
           
@@ -394,15 +395,15 @@
 <div class="sm-container">
     <a href="javascript:void(0)" 
     onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fleicester-schools%2F', 'facebook-share', 'width=580,height=296');return false;"
-     class="fa fa-facebook">   
+     class="fa fa-facebook" title="Share on Facebook">   
     </a>
     <a href="javascript:void(0)" 
-    onClick="window.open('https://twitter.com/intent/tweet?text=Private%20Tutoring%20In%20Leicester%20By%20A%20Tutor%20With%2020%20Years%20Experience&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fleicester-schools%2F', 'twitter-share', 'width=550,height=235');return false;" 
-     class="fa fa-twitter">   
+    onClick="window.open('https://twitter.com/intent/tweet?text=Leicester%20Tutor%20With%2020%20Years%20Experience&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fleicester-schools%2F', 'twitter-share', 'width=550,height=235');return false;" 
+     class="fa fa-twitter"  title="Share on Twitter">   
     </a>
     <a href="javascript:void(0)" 
     onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fleicester-schools%2F', 'google-plus-share', 'width=490,height=530');return false;"
-     class="fa fa-google">   
+     class="fa fa-google"  title="Share on Google+">   
     </a>
     </div>
 </div></body>
