--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="This privacy policy sets out how Tutor Interventions uses and protects any information that you give Tutor Interventions when you use this website. Tutor Interventions is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using ...">
     <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
+    <meta property="og:type"   content="website" /> 
     <meta property="og:title" content="Privacy Policy">
     <meta property="og:description" content="This privacy policy sets out how Tutor Interventions uses and protects any information that you give Tutor Interventions when you use this website. Tutor Interventions is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using ...">
     <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
@@ -416,15 +417,15 @@ We will not sell, distribute or lease your personal information to third parties
 <div class="sm-container">
     <a href="javascript:void(0)" 
     onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fprivacy-policy%2F', 'facebook-share', 'width=580,height=296');return false;"
-     class="fa fa-facebook">   
+     class="fa fa-facebook" title="Share on Facebook">   
     </a>
     <a href="javascript:void(0)" 
     onClick="window.open('https://twitter.com/intent/tweet?text=This%20privacy%20policy%20sets%20out%20how%20Tutor%20Interventions%20uses%20and%20protects%20any%20information%20that%20you%20give%20Tutor%20Interventions%20when%20you%20use%20this%20website.%20Tutor%20Interventions%20is%20committed%20to%20ensuring%20that%20your%20privacy%20is%20protected.%20Should%20we%20ask%20you%20to%20provide%20certain%20information%20by%20which%20you%20can%20be%20identified%20when%20using%20...&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fprivacy-policy%2F', 'twitter-share', 'width=550,height=235');return false;" 
-     class="fa fa-twitter">   
+     class="fa fa-twitter"  title="Share on Twitter">   
     </a>
     <a href="javascript:void(0)" 
     onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fprivacy-policy%2F', 'google-plus-share', 'width=490,height=530');return false;"
-     class="fa fa-google">   
+     class="fa fa-google"  title="Share on Google+">   
     </a>
     </div>
 </div></body>
