--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Welcome to our website. If you continue to browse and use this website, you are agreeing to comply with and be bound by the following terms and conditions of use, which together with our privacy policy govern Tutor Interventions’ relationship with you in relation to this website. If you disagree ...">
     <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
+    <meta property="og:type"   content="website" /> 
     <meta property="og:title" content="Terms and Conditions">
     <meta property="og:description" content="Welcome to our website. If you continue to browse and use this website, you are agreeing to comply with and be bound by the following terms and conditions of use, which together with our privacy policy govern Tutor Interventions’ relationship with you in relation to this website. If you disagree ...">
     <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
@@ -399,15 +400,15 @@
 <div class="sm-container">
     <a href="javascript:void(0)" 
     onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fterms-and-conditions%2F', 'facebook-share', 'width=580,height=296');return false;"
-     class="fa fa-facebook">   
+     class="fa fa-facebook" title="Share on Facebook">   
     </a>
     <a href="javascript:void(0)" 
     onClick="window.open('https://twitter.com/intent/tweet?text=Welcome%20to%20our%20website.%20If%20you%20continue%20to%20browse%20and%20use%20this%20website%2C%20you%20are%20agreeing%20to%20comply%20with%20and%20be%20bound%20by%20the%20following%20terms%20and%20conditions%20of%20use%2C%20which%20together%20with%20our%20privacy%20policy%20govern%20Tutor%20Interventions%E2%80%99%20relationship%20with%20you%20in%20relation%20to%20this%20website.%20If%20you%20disagree%20...&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fterms-and-conditions%2F', 'twitter-share', 'width=550,height=235');return false;" 
-     class="fa fa-twitter">   
+     class="fa fa-twitter"  title="Share on Twitter">   
     </a>
     <a href="javascript:void(0)" 
     onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fterms-and-conditions%2F', 'google-plus-share', 'width=490,height=530');return false;"
-     class="fa fa-google">   
+     class="fa fa-google"  title="Share on Google+">   
     </a>
     </div>
 </div></body>
