Changed front page

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Leicester Tutor With 20 Years Experience">
+    <meta name="description" content="Leicester tutor with 20 years teaching experience">
     <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
     <meta property="og:type"   content="website" /> 
     <meta property="og:title" content="Leicester Tutor, Rachael Dyer, With 20 Years Teaching Experience">
-    <meta property="og:description" content="Leicester Tutor With 20 Years Experience">
+    <meta property="og:description" content="Leicester tutor with 20 years teaching experience">
     <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/">
 
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Leicester Tutor, Rachael Dyer, With 20 Years Teaching Experience">
-    <meta property="twitter:description" content="Leicester Tutor With 20 Years Experience">
+    <meta property="twitter:description" content="Leicester tutor with 20 years teaching experience">
     <meta property="twitter:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
         <meta property="twitter:image:alt" content="Classmates handsup header">
           
@@ -162,7 +162,24 @@
         </div>
       </div>
     </header>
-     <!-- Testimonials -->
+        <section class="feature specialities bg-light">
+      <div class="container">
+        <div class="row">
+            <article class="col-lg-12">
+             <h2 class="text-center">Rachael Dyer - Tutor</h2>
+             <div class="seperator"></div>
+            <p>My name is Rachael Dyer. I have been a teacher for over 20 years and teach GCSE Maths, English, SATS, 11+ and many other subjects. I have a lot of experience with children with special needs and those struggling within the school environment. Through my years of experience I know how to get the best out of your child and realise their true potential.</p>
+<p>Tutoring is not just about knowledge of a subject. It&#39;s also about how to make it engaging and relevant to a child. It&#39;s about making study enjoyable and not a chore. It&#39;s about looking at the subject from the child&#39;s point of view.</p>
+<p>I know that I am doing my job right if the child looks forward to my tutor sessions as well as making measurable progress in there chosen subject. The two go hand in hand.</p>
+<p>When you hire me you know you are getting a true education professional that will make a significant difference in your child&#39;s educational journey.</p>
+             <div class="img-wrapper">
+                <img src="/img/tutor-journey.png" alt="Tutor Journey">              
+             </div>
+
+            </article>
+        </div>
+      </div>
+    </section>     <!-- Testimonials -->
     <section class="feature home-testimonial text-center bg-light">
       <div class="container">
         <h2>What clients are saying...</h2>
@@ -177,31 +194,6 @@
               <h5>Madison J.</h5>
               <p class="font-weight-light">"Great tutor committed to my daughter and able to manage her complex needs using different techniques and humour. My daughter can be difficult to engage/encourage and has low self-esteem, with Rachael’s support she is learning and her confidence is growing and showing through already."</p>
           </div>
-        </div>
-      </div>
-    </section>        <section class="feature specialities bg-light text-center">
-      <div class="container">
-        <div class="row">
-            <article class="col-lg-12">
-             <h2>My Tutor Specialities</h2>
-             <div class="seperator"></div>
-             <p>
-             I specialise in students with special needs and can provide tutoring for the core subjects: English and Maths from Year 3 to Year 11 (including GCSEs). Also 11+ exam preparation.
-             </p>
-             <p>
-             I can also cover other subjects on request, including life skills and functional skills for Year 12 right through to adult education.
-             </p>
-             <p>
-             I'm available during both the day and evenings. And also during the weekends and the school holidays.
-             </p>
-            <p>
-             Available for home tuition or the more flexible online tuition.
-             </p>
-             <div class="img-wrapper">
-                <img src="/img/tutor-journey.png" alt="Tutor Journey">              
-             </div>
-
-            </article>
         </div>
       </div>
     </section>    <section class="feature advantages bg-dark text-center">  
@@ -570,7 +562,7 @@
      class="fa fa-facebook" title="Share on Facebook">   
     </a>
     <a href="javascript:void(0)" 
-    onClick="window.open('https://twitter.com/intent/tweet?text=Leicester%20Tutor%20With%2020%20Years%20Experience&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'twitter-share', 'width=550,height=235');return false;" 
+    onClick="window.open('https://twitter.com/intent/tweet?text=Leicester%20tutor%20with%2020%20years%20teaching%20experience&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
     </a>
     <a href="javascript:void(0)" 
