--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <div class="container">
         <div class="row">
             <article class="col-lg-12">
-             <h2 class="text-center">Rachael Dyer - Tutor</h2>
+             <h2 class="text-center">Rachael Dyer, Tutor In Leicester</h2>
              <div class="seperator"></div>
             <p>My name is Rachael Dyer. I have been a teacher for over 20 years and teach GCSE Maths, English, SATS, 11+ and many other subjects. I have a lot of experience with children with special needs and those struggling within the school environment. Through my years of experience I know how to get the best out of your child and realise their true potential.</p>
 <p>Tutoring is not just about knowledge of a subject. It&#39;s also about how to make it engaging and relevant to a child. It&#39;s about making study enjoyable and not a chore. It&#39;s about looking at the subject from the child&#39;s point of view.</p>
